[package]
name = "general_purpose_slime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serenity = { version = "0.11.6", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "rt"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"